--- a/lesson01/index.html
+++ b/lesson01/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
+    
+<head>
+        <title>Biography</title>
+</head>
+
 <body>
 
-<h1>Biography</h1>
+<h1>About Me</h1>
 <h3>Personal Introduction</h3>
 <p>Hi! My name is Prescott Grigsby and I'm from San Diego, CA. Currently I'm pursuing my bachelors in computer science. In my free time, some things I like to do are:
 
@@ -17,7 +22,8 @@ Currently I have no pets, but I am constantly awaiting the day I feel responsibl
 
 
 <h3>History & The Future</h3>
-<p> In the past, I've taken many different CS courses that have helped to not only refine my work, but also motivate me to do more. I found out from one of my earlier class that I really enjoy working with API's, and pulling data from sources that can be displayed 
+<p> In the past, I've taken many different CS courses that 
+    have helped to not only refine my work, but also motivate me to do more. I found out from one of my earlier class that I really enjoy working with API's, and pulling data from sources that can be displayed 
     elsewhere. In high school I took AP CS, and it was a really fun and engaging class for me that helped to spark the path I'm on today. 
 
     Unfortunately when it comes to college, I kinda had to backtrack in terms of difficulty which caused me to lose some of that motivation to pursue things, since I lost the feeling of improvement. Thnafully though, web development has helped to fix that since 
