--- a/lesson01/index.html
+++ b/lesson01/index.html
@@ -2,14 +2,15 @@
 <html lang = "en">
     
 <head>
-        <title>Biography</title>
+    <title>Biography</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
 <h1>About Me</h1>
 <h3>Personal Introduction</h3>
-<p>Hi! My name is Prescott Grigsby and I'm from San Diego, CA. Currently I'm pursuing my bachelors in computer science. In my free time, some things I like to do are:
+<p>Hi! My name is Prescott Grigsby and I'm from San Diego, CA. Currently I'm pursuing my bachelors in computer science which is why I'm taking a web development course. In my free time, some things I like to do are:
 
     <ul>
         <li>Develop games and websites</li>
@@ -26,9 +27,14 @@ Currently I have no pets, but I am constantly awaiting the day I feel responsibl
     have helped to not only refine my work, but also motivate me to do more. I found out from one of my earlier class that I really enjoy working with API's, and pulling data from sources that can be displayed 
     elsewhere. In high school I took AP CS, and it was a really fun and engaging class for me that helped to spark the path I'm on today. 
 
-    Unfortunately when it comes to college, I kinda had to backtrack in terms of difficulty which caused me to lose some of that motivation to pursue things, since I lost the feeling of improvement. Thnafully though, web development has helped to fix that since 
+    Unfortunately when it comes to college, I kinda had to backtrack in terms of difficulty which caused me to lose some of that motivation to pursue things, since I lost the feeling of improvement. Thankfully though, web development has helped to fix that since 
     it is different enough from just coding in a typical language that it intrigues me. I look forward to furthering my understandment of development, and being able to apply these skills to the real world. 
+
+    <img name="personalPhoto" id="img" style="display:flex;width:400px;height:80px;"
+    src="https://cdna.artstation.com/p/assets/images/images/081/168/314/large/prescott-grigsby-x-1772503711.jpg?1729565475"
+    alt="Loading...">
 </p>
+
 
 </body>
 </html>
