--- a/lesson01/index.html
+++ b/lesson01/index.html
@@ -20,8 +20,6 @@
 
 Currently I have no pets, but I am constantly awaiting the day I feel responsible enough to end up getting a cat... 
 </p>
-
-
 <h3>History & The Future</h3>
 <p>  In the past, I've taken many different CS courses that 
     have helped to not only refine my work, but also motivate me to do more. I found out from one of my earlier class that I really enjoy working with API's, and pulling data from sources that can be displayed 
@@ -32,7 +30,7 @@ Currently I have no pets, but I am constantly awaiting the day I feel responsibl
 
 
 
-    <img name="personalPhoto" id="img" style="display:flex;width:200px;height:250px;"
+    <img name="personalPhoto" id="img" style="display:flex;width:200px;height:250px;margin-top:30px;"
     src="https://cdna.artstation.com/p/assets/images/images/081/168/314/large/prescott-grigsby-x-1772503711.jpg?1729565475"
     alt="Loading...">
 </p>
