--- a/lesson01/index.html
+++ b/lesson01/index.html
@@ -17,7 +17,7 @@
         <li>Play games with friends</li>
         <li>Watch shows with family</li>
       </ul>
-</p>
+
 <p>
     Currently I have no pets, but I am constantly awaiting the day I feel responsible enough to end up getting a cat... 
 </p>
@@ -32,7 +32,7 @@
 
 
 
-    <img name="personalPhoto" id="img" style="display:flex;width:200px;height:250px;margin-top:30px;"
+    <img id="img" style="display:flex;width:200px;height:250px;margin-top:30px;"
     src="https://cdna.artstation.com/p/assets/images/images/081/168/314/large/prescott-grigsby-x-1772503711.jpg?1729565475"
     alt="Loading...">
 </p>
