--- a/lesson01/index.html
+++ b/lesson01/index.html
@@ -10,7 +10,7 @@
 
 <h1>About Me</h1>
 <h3>Personal Introduction</h3>
-<p style="width:600px"> Hi! My name is Prescott Grigsby and I'm from San Diego, CA. Currently I'm pursuing my bachelors in computer science which is why I'm taking a web development course. In my free time, some things I like to do are:
+<p style="width:60%"> Hi! My name is Prescott Grigsby and I'm from San Diego, CA. Currently I'm pursuing my bachelors in computer science which is why I'm taking a web development course. In my free time, some things I like to do are:
 
     <ul>
         <li>Develop games and websites</li>
@@ -23,7 +23,7 @@
 </p>
 
 <h3>History & The Future</h3>
-<p style="width:600px">  In the past, I've taken many different CS courses that 
+<p style="width:60%">  In the past, I've taken many different CS courses that 
     have helped to not only refine my work, but also motivate me to do more. I found out from one of my earlier class that I really enjoy working with API's, and pulling data from sources that can be displayed 
     elsewhere. In high school I took AP CS, and it was a really fun and engaging class for me that helped to spark the path I'm on today. 
 
